# skynet-factorio

./: .gitignore  .gitmodules  LICENSE  README.md
harness/: pyproject.toml
harness/skynet_harness/: __init__.py  chat_pump.py  client.py  diag.py  follow_daemon.py  smoke.py  tools.py
mod/skynet_observer/: control.lua  info.json
notes/: design_v0.md  research_landscape_v0.md  rl_primer.md  survey_2026_05_21.md
scripts/: init_headless.sh  run_headless.sh
