[project]
name = "skynet-harness"
version = "0.0.1"
description = "Python harness for skynet-factorio. RCON client + decision-layer scaffold."
requires-python = ">=3.10"
dependencies = [
    "factorio-rcon-py>=2.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["skynet_harness"]
